--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <style>
         canvas {
             background-color: rgb(126, 126, 126);
+            transform: scale(1.6);
+            transform-origin: top left;
         }
     </style>
 </head>
 
 <body>
+    <p>Score: <span id="score">0</span></p>
     <canvas></canvas>
     <script src="./js/snake.js"></script>
     <script src="./js/app.js"></script>
